# fullstack-starter

./: Makefile  README.md  docker-compose.yml  login-password-less.php  package-lock.json  package.json  tailwind.config.js
back-end/: pyproject.toml
back-end/api/: main.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 187176178dcc_create_item_model.py
backend/api/: config.py  main.py  schemas.py
backend/api/database/: models.py  setup.py
front-end/: README.md  package-lock.json  package.json  tailwind.config.js
front-end/src/components/: HelloWorld.vue
front-end/src/views/: ApiView.vue
frontend/: Dockerfile  README.md
frontend/src/components/: ApiTester.vue
frontend/src/router/: index.ts
src/assets/: main.css
src/components/: NavBar.vue  NavMenu.vue  TheWelcome.vue  WelcomeItem.vue
src/views/: AboutView.vue
